server/assets/main.css
html,
body {
  margin: 0;
  padding: 0;
  line-height: 1.5em;
}

body {
  font-family: Verdana, Geneva, sans-serif;
  background: #ecece3;
}

header {
  display: flex;
  align-items: center;
  background: rgb(255, 102, 0);
  color: white;
  position: sticky;
  top: 0;
  z-index: 1;
  padding: 0.1em;
}

.content {
  padding: 1.3em 0;
  width: 90vw;
  max-width: 800px;
  margin: 0 auto;
}

.story {
  position: relative;
  list-style-type: none;
  background: white;
  padding: 1.3em;
  border-radius: 0.2em;
  overflow: hidden;
}

.story > .title {
  display: block;
  font-weight: normal;
  margin-top: 0;
  font-size: 1.6em;
  color: black;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  margin-bottom: 0.3em;
}

.comments > .comment {
  border-top: thin solid #ccc;
  margin-top: 1em;
  padding-top: 1em;
  padding-inline-start: 0.5em;
}

.comment.expanded {
  background: white;
  padding: 1.3em;
  border-radius: 0.2em;
}

.comment > footer {
  margin-top: 0.5em;
}

.story > footer,
.comment > footer {
  display: flex;
  flex-wrap: wrap;
  gap: 1.3em;
  color: grey;
}

.stories {
  box-sizing: border-box;
  display: grid;
  grid-gap: 0.3em;
  padding: 0;
  margin: 0;
}

.logo {
  display: flex;
  align-items: center;
  color: white;
  text-decoration: none;
  padding: 0.3em 1.3em;
}

.logo:hover {
  background: rgb(222 90 2);
}

.logo:active {
  background: rgb(195 78 0);
}

.logo > img {
  border: thin solid white;
}

.logo > .logo-caption {
  margin: 0 0.5em;
}

@keyframes spin-animation {
  100% {
    transform: rotate(360deg);
  }
}

.reload.spin-animation > svg {
  animation: spin-animation 1s linear 1;
}

.skeleton {
  display: inline-block;
  position: relative;
  border-radius: 0.2em;
  width: 100%;
  height: 0.9em;
  margin-top: 0.3em;
  margin-bottom: 0.3em;
  overflow: hidden;
  background-color: rgba(47, 57, 65, 0.1);
}

@media only screen and (width <= 1000px) {
  .content {
    width: 95vw;
    max-width: inherit;
  }

  body {
    font-size: 2em;
  }

  .comment-body {
    font-size: 0.6em;
  }

  .logo {
    font-size: 1.4em;
    padding: 0.3em 0.8em;
  }

  .logo > img {
    height: 1em;
    width: 1em;
  }

  .stories {
    grid-gap: 0.4em;
  }
}

